# foxogram-desktop

./: .gitignore  CMakeLists.txt  CmakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: Install-OpenSSL.ps1  build.yml  codeql.yml
Foxogram/: CMakeLists.txt
Foxogram/Resources/: foxogram.qrc
Foxogram/Source/: constants.cpp  constants.h  foxogramclient.cpp  foxogramclient.h  launcher.cpp  launcher.h  main.cpp
Foxogram/Source/services/: authorizationservice.cpp  authorizationservice.h
Foxogram/Source/ui/tools/: authorizationwidget.cpp  giflabelloader.cpp  giflabelloader.h  stringutils.cpp  stringutils.h
Foxogram/Source/ui/widgets/: basestyle.cpp  basestyle.h  fwidget.cpp  fwidget.h  loadingwidget.cpp  loadingwidget.h  modalwidget.cpp  modalwidget.h  multilayerwidget.cpp  multilayerwidget.h  style.cpp  style.h
Foxogram/Source/ui/widgets/auth/: authwidget.cpp  authwidget.h  digitinput.cpp  digitinput.h  fieldlabel.cpp  fieldlabel.h  resetpasswordmodal.cpp  resetpasswordmodal.h  signin.cpp  signin.h  signinwidget.cpp  signinwidget.h  signup.cpp  signup.h  signupwidget.cpp  signupwidget.h  signwidgetabstract.cpp  signwidgetabstract.h  style.cpp  style.h  verifyemailmodal.cpp  verifyemailmodal.h
Foxogram/Source/ui/widgets/components/: flineedit.cpp  flineedit.h
Foxogram/Source/ui/widgets/messenger/: ChatComponent.cpp  ChatComponent.h  SearchBar.cpp  SearchBar.h  mainwindow.cpp  mainwindow.h
include/: ChannelComponent.h  DigitInput.h  FoxogramIconButton.h  FoxogramLoginForm.h  FoxogramMainWindow.h  FoxogramModal.h  FoxogramSignupForm.h  FoxogramVerifyEmailModal.h  IconButton.h  MessageComponent.h
src/: ChannelComponent.cpp  DigitInput.cpp  FoxogramIconButton.cpp  FoxogramLogin.ui  FoxogramLoginForm.cpp  FoxogramLoginForm.h  FoxogramMainWindow.cpp  FoxogramMainWindow.h  FoxogramModal.cpp  FoxogramModal.h  FoxogramSignup.ui  FoxogramSignupForm.cpp  FoxogramSignupForm.h  FoxogramVerifyEmailModal.cpp  IconButton.cpp  MessageComponent.cpp  main.cpp
src/ui/: ChannelComponent.ui  FoxogramLogin.ui  FoxogramModal.ui  FoxogramSignup.ui  MessageComponent.ui  assets.qrc
